# learn-ai

./: .editorconfig  .env.example  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  CLAUDE.md  CURRICULUM.md  README.md  jest.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json
.claude/commands/: exam.md  tutor.md
.claude/skills/jd-gap-analysis/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  deploy.yml
.husky/: pre-push
data/: README.md
data/corpus/: 01-what-is-machine-learning.md  02-neural-networks.md  03-embeddings.md  04-transformers-and-attention.md  05-training-and-fine-tuning.md  06-retrieval-augmented-generation.md
docs/: ADVANCED_RAG.md  COURSE_MAINTENANCE.md  GLOSSARY.md  LANGGRAPH.md  TOOLING.md  TUTOR_AND_EXAM.md
modules/00-setup/: README.md
modules/00-setup/py/: compare_providers.py  hello.py  streaming.py
modules/00-setup/ts/: compare_providers.ts  hello.ts  package.json  streaming.ts
modules/01-fundamentals/: README.md
modules/01-fundamentals/py/: attention.py  bigram.py  bpe.py  cosine.py  sampling.py  test_fundamentals.py
modules/01-fundamentals/ts/: attention.ts  bigram.ts  bpe.test.ts  bpe.ts  cosine.ts  package.json  sampling.ts  tsconfig.json
modules/01b-ml-foundations/: README.md
modules/01b-ml-foundations/py/: 01_linear_regression.py  02_bias_variance.py  03_logistic_regression.py  04_roc_kmeans.py
modules/01b-ml-foundations/ts/: package.json  (+5 more)
modules/01c-deep-learning/: README.md
modules/01d-transformer/: README.md
modules/01e-trees-ensembles/: README.md
modules/01f-stats-foundations/: README.md
modules/02-llm-integration/: README.md
modules/03-prompting/: README.md  eval_dataset.json
modules/04-embeddings-vectors/: README.md
modules/05-rag/: README.md
modules/05b-advanced-rag/: README.md
modules/06-agents/: README.md
modules/06b-langgraph/: README.md
modules/06c-agent-frameworks/: README.md
modules/06d-agent-memory/: README.md
modules/07-advanced-production/: README.md
modules/07b-delivery-operations/: .env.example  .gitignore  README.md  RUNBOOK.md  compose.yaml
modules/08-classification/: README.md
modules/09-computer-vision/: README.md
modules/10-image-generation/: README.md
modules/11-document-ingestion/: README.md
modules/12-text-to-sql/: README.md
modules/13-fine-tuning/: README.md
modules/13b-alignment/: README.md
modules/14-local-inference-optimization/: README.md
modules/15-reasoning-test-time-compute/: README.md
modules/16-context-engineering/: README.md
modules/17-mcp/: README.md
modules/18-computer-use/: README.md
modules/19-audio-speech/: README.md
modules/20-ai-security/: README.md
modules/20b-governance-privacy/: README.md  data_map.json
modules/21-llmops-eval/: README.md  eval-gate.yml
modules/21b-evaluation-reliability/: README.md
modules/22-ai-product-ux/: README.md
modules/23-capstone/: README.md
projects/news-agent/: README.md  test_news_agent.py
projects/tutor/: README.md
scripts/: build_site.py  smoke.ts  smoke_test.py
scripts/ci/: check_control_chars.py  eval_gate_status.py  test_check_control_chars.py  test_eval_gate_status.py
scripts/curriculum/: build_manifest.py  check_route_hours.py  check_structure.py  ci_gates.json  exercise_manifest.json  governance_templates.py  language_support.json  manifest.py  module_times.json  net_guard.cjs  net_guard.py  parity_policy.json  release_assets.py  smoke_exercises.py  test_check_structure.py  test_governance_templates.py  test_manifest.py  test_release_assets.py  test_route_hours.py  test_smoke_exercises.py
(+517 files in other folders)
